<resources>
    <string name="app_name">TripAppTCD0502</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_upload">Upload</string>
    <string name="label_input_name">Name</string>
    <string name="label_input_amount">Amount</string>
    <string name="label_input_destination">Destination</string>
    <string name="label_input_date_of_trip">Date of the trip</string>
    <string name="label_input_time">Time of the expense</string>
    <string name="label_input_description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_blank_fragment">Home fragment</string>
    <string name="upload_blank_fragment">Upload Data</string>
    <string name="page_title">Home</string>
    <string name="none_text"> </string>
    <string name="label_input_user_id">User ID</string>


    <string name="success_title">Add Expense Success</string>
    <string name="warning_title">Warning Title</string>
    <string name="error_title">Error Title</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="okay">Okay</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>