<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTripActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputNameOfTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/label_input_name"
        android:textStyle="bold"
        app:placeholderText="Name of the trip"
        app:helperText="Required*"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="96dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/label_input_destination"
        android:textStyle="bold"
        app:helperText="Required*"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/inputNameOfTrip"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateOfTripInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/label_input_date_of_trip"
        android:textStyle="bold"
        app:helperText="Required*"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/inputDestination"
        app:placeholderText="dd/mm/yyyy"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="false"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textAssessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="Require Risks Assessment"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateOfTripInput" />

    <RadioGroup
        android:id="@+id/radioAssessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateOfTripInput"
        android:layout_marginStart="48dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAssessment"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rb_coldfusion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:text="Yes" />

        <RadioButton
            android:id="@+id/rb_flex"
            android:layout_width="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:text="No" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputDescription"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="32dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/label_input_description"
        android:textStyle="bold"
        app:helperTextEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/radioAssessment"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="132dp"
        android:layout_height="61dp"
        android:layout_marginTop="44dp"
        android:text="Cancel"
        android:textColor="@color/purple_700"
        android:textSize="18dp"
        android:textStyle="bold"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDescription" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="179dp"
        android:layout_height="61dp"
        android:layout_marginTop="44dp"
        android:background="@color/purple_700"
        android:text="Add"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>