<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AddExpense">

    <include
        android:id="@+id/include2"
        layout="@layout/tool_bar_sub"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="266dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdownType"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="32dp"
        android:hint="Type"
        android:textStyle="bold"
        app:helperText="Required*"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/type_auto_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/none_text"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputAmount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="218dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/label_input_amount"
        android:textStyle="bold"
        app:helperText="Required*"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdownType"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderText="VND"
        tools:layout_editor_absoluteY="96dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberSigned"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateOfExpenseInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/label_input_time"
        android:textStyle="bold"
        app:helperText="Required*"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/inputAmount"
        app:placeholderText="dd/mm/yyyy"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="false"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_add_expense"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="358dp"
        android:layout_height="55dp"
        android:layout_marginTop="228dp"
        android:background="@drawable/border_button"
        android:text="ADD"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateOfExpenseInput" />

<!--    <WebView-->
<!--        android:id="@+id/mapWebView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="186dp"-->
<!--        android:layout_marginStart="32dp"-->
<!--        android:layout_marginTop="24dp"-->
<!--        android:layout_marginEnd="32dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/dateOfExpenseInput" />-->

</androidx.constraintlayout.widget.ConstraintLayout>