<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.UpdateTripActivity">
    <include
        layout="@layout/tool_bar_sub" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/updateNameOfTrip"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/label_input_name"
        android:textStyle="bold"
        app:helperText="Required*"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderText="Name of the trip"
        tools:layout_editor_absoluteY="96dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/trip_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/updateDestination"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/label_input_destination"
        android:textStyle="bold"
        app:helperText="Required*"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/updateNameOfTrip"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/trip_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/updateDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/label_input_date_of_trip"
        android:textStyle="bold"
        app:helperText="Required*"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/updateDestination"
        app:placeholderText="dd/mm/yyyy"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_trip_txt_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="false"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/updateAssessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="Require Risks Assessment"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateDate" />

    <RadioGroup
        android:id="@+id/radioAssessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/updateDate"
        android:layout_marginStart="48dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateAssessment"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rb_yes_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="Yes"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_no_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:paddingEnd="10dp"
            android:text="No"
            android:textSize="16sp" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/updateDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/label_input_description"
        android:textStyle="bold"
        app:helperTextEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/radioAssessment"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/trip_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_view_expenses"
        android:layout_width="358dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_button"
        android:text="See all Expenses"
        android:textColor="@color/purple_700"
        android:textSize="18dp"
        android:textStyle="bold"
        app:backgroundTint="@color/blue_200"
        style="?attr/materialButtonOutlinedStyle"
        app:elevation="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_update"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="358dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/border_button"
        android:textColor="@color/white"
        android:text="Submit"
        android:textSize="18dp"
        android:textStyle="bold"
        app:backgroundTint="@color/purple_700"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>